--- a/Vue/introduction.html
+++ b/Vue/introduction.html
@@ -11,7 +11,13 @@
 				</li>
 			</ol>
 		</div>
+
+		<div id="app-5">
+			<p>{{ message }}</p>
+			<button v-on:click='reverseMessage'>Reverse Message</button>
+		</div>
 	</body>
+
 	<script>
 		var app4 = new Vue({
 			el:"#app-4",
@@ -23,11 +29,24 @@
 				]
 			}
 		});
-		
+	
+		var app5 = new Vue({
+			el:"#app-5",
+			data:{
+				message:"Hello,Vue.js world!",
+			},
+			methods:{
+				reverseMessage:function(){
+					this.message = this.message.split('').reverse().join('');
+				}
+			}
+		});
+
 		setInterval(() => {
 			var count = app4.todos.length;
 			if(count >10) return;
 			app4.todos.push({text: "No "+  count + " by setInterval appended."});
 		}, 1000);
+	
 	</script>
 </html>
