--- a/Vue/introduction.html
+++ b/Vue/introduction.html
@@ -16,6 +16,11 @@
 			<p>{{ message }}</p>
 			<button v-on:click='reverseMessage'>Reverse Message</button>
 		</div>
+
+		<div id="app-6">
+			<p>{{ message }}</p>
+			<input v-model='message'>
+		</div>
 	</body>
 
 	<script>
@@ -39,6 +44,13 @@
 				reverseMessage:function(){
 					this.message = this.message.split('').reverse().join('');
 				}
+			}
+		});
+
+		var app6=new Vue({
+			el:"#app-6",
+			data:{
+				message:'Hello, Vue.js world!'
 			}
 		});
 
